# zeleyy-authenticator

./: Cargo.toml  LICENSE  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
core/: Cargo.toml
core/src/: constants.rs  lib.rs  utils.rs
core/src/database/: accounts.rs  connection.rs  mod.rs  schema.rs
core/src/models/: accounts.rs
core/src/secrets/: keyring.rs  mod.rs
core/src/services/: accounts.rs
core/src/totp/: generator.rs  mod.rs  utils.rs
public/locales/en/: translation.json
public/locales/ru/: translation.json
src/: main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/android-config/: AndroidManifest.xml  build.gradle.kts
src-tauri/android-config/app/: build.gradle.kts
src-tauri/capabilities/: default.json  desktop.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/vault/: database.rs  keyring.rs  mod.rs  utils.rs
src/app/: App.tsx
src/app/layouts/: index.ts
src/app/layouts/AddLayout/: AddLayout.module.scss  AddLayout.tsx  index.ts
src/app/layouts/AnimatedLayout/: AnimatedLayout.module.scss  AnimatedLayout.tsx  index.ts
src/app/layouts/MainLayout/: MainLayout.module.scss  MainLayout.tsx
src/app/layouts/SecondaryLayout/: SecondaryLayout.module.scss  SecondaryLayout.tsx
src/app/providers/: index.ts
src/app/providers/query/ui/: QueryProvider.tsx
src/app/providers/router/: index.ts
src/app/providers/router/config/: routes.tsx
src/app/providers/theme/hooks/: index.ts  useThemeQuery.ts
src/app/providers/theme/ui/: ThemeProvider.tsx
src/app/styles/: reset.scss
src/app/styles/variables/: colors.scss  index.scss  spacing.scss
src/entities/account/: index.ts
src/entities/account/hooks/: index.ts  useAccounts.ts  useAddAccount.ts  useAddManualAccount.ts  useContextMenu.ts  useCopyOtp.ts  useDeleteAccount.ts  useUpdateAccount.ts
src/entities/account/lib/: index.ts  parseQrData.ts
src/entities/account/model/: index.ts  types.ts
src/features/DeleteAccountModal/: index.ts
src/features/DeleteAccountModal/ui/: DeleteAccountModal.tsx  index.ts
src/features/FileQrSelector/: index.ts
src/features/FileQrSelector/ui/: FileQrSelector.tsx  index.ts
src/features/OtpTimer/: index.ts
src/features/OtpTimer/ui/: OtpTimer.module.scss  OtpTimer.tsx  index.ts
src/features/QrScanner/: index.ts
src/features/QrScanner/ui/: QrScanner.module.scss  QrScanner.tsx  index.ts
src/features/auth/: index.ts
src/features/auth/ui/: index.ts
src/features/auth/ui/AuthGuard/: AuthGuard.module.scss  AuthGuard.tsx  index.ts
src/features/update/: index.ts
src/features/update/hooks/: index.ts  useCurrentVesion.ts  useLatestVersion.ts  useUpdateInstall.ts
src/pages/: index.ts
src/pages/AboutPage/: AboutPage.tsx
src/pages/EditPage/: EditPage.tsx  index.ts
src/pages/HomePage/: HomePage.module.scss  HomePage.tsx
src/pages/SettingsPage/: SettingsPage.tsx
src/pages/add/: index.ts
src/pages/add/AddManualPage/: AddManualPage.tsx  index.ts
src/pages/add/AddQrPage/: AddQrPage.tsx  index.ts
src/pages/add/QrConfirmPage/: QrConfirmPage.module.scss  QrConfirmPage.tsx  index.ts
src/shared/api/: queryClient.ts
src/shared/config/: index.ts
src/shared/config/i18n/: index.ts
src/shared/config/keys/: index.ts
src/shared/config/routing/: index.ts  paths.ts  routeOrder.ts
src/shared/lib/authService/: BiometryService.ts  biometryAdapter.ts  biometryService.ts  index.ts
src/shared/lib/context/: ThemeContext.ts
src/shared/lib/hooks/: index.ts  useBiometry.ts  usePageAnimation.ts  useQrScanner.ts
src/shared/lib/storage/: storage.ts
src/shared/ui/: index.ts
src/shared/ui/Button/: Button.module.scss  Button.tsx
src/shared/ui/Icon/: Icon.tsx
src/shared/ui/Input/: Input.module.scss  Input.tsx
src/shared/ui/Select/: Select.module.scss  Select.tsx
src/shared/ui/Switch/: Switch.module.scss  Switch.tsx
src/shared/ui/feedback/: index.ts
src/shared/ui/feedback/alert/: index.ts
src/shared/ui/feedback/alert/InlineAlert/: InlineAlert.module.scss  InlineAlert.tsx
src/shared/ui/feedback/alert/StatusAlert/: StatusAlert.module.scss  StatusAlert.tsx  index.ts
src/shared/ui/feedback/loading/: index.ts
src/shared/ui/feedback/loading/Skeleton/: Skeleton.tsx
src/shared/ui/feedback/loading/SpinnerLoader/: SpinnerLoader.module.scss  SpinnerLoader.tsx  index.ts
src/shared/ui/layout/Flex/: Flex.module.scss  Flex.tsx
src/shared/ui/layout/Modal/: Modal.module.scss  Modal.tsx
src/widgets/AccountList/: index.ts
src/widgets/AccountList/ui/: AccountList.tsx  index.ts
src/widgets/CodeCard/: index.ts
src/widgets/CodeCard/ui/: CodeCard.module.scss  CodeCard.tsx  index.ts
src/widgets/ContextMenu/: index.ts
src/widgets/ContextMenu/ui/: ContextMenu.module.scss  ContextMenu.tsx  index.ts
src/widgets/PageSection/: PageSection.tsx  index.ts
src/widgets/PageSection/ui/: PageSection.module.scss  index.ts
src/widgets/PreferenceItem/: PreferenceItem.tsx  index.ts
src/widgets/PreferenceItem/ui/: PreferenceItem.module.scss  PreferenceItem.tsx  index.ts
src/widgets/UpdateModal/: index.ts
src/widgets/UpdateModal/ui/: UpdateModal.module.scss  UpdateModal.tsx  index.ts
