[package]
name = "zeleyy-authenticator-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "zeleyy_authenticator_core"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
base32 = "0.5.1"
base64 = "0.22.1"
log = "0.4.29"
r2d2 = "0.8.10"
r2d2_sqlite = "0.33.0"
rand = "0.10.1"
rusqlite = { version = "0.39.0", features = ["bundled-sqlcipher"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
totp-lite = "2.0.1"


[target.'cfg(target_os = "windows")'.dependencies]
openssl = { version = "0.10.76", features = ["vendored"] }
keyring = { version = "3.6.3", features = ["windows-native"] }


[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.3", features = ["apple-native"] }


[target.'cfg(all(target_os = "linux", not(target_arch = "android")))'.dependencies]
keyring = { version = "3.6.3", features = ["sync-secret-service"] }
