[package]
name = "zeleyy-authenticator"
version = "0.5.2"
description = "TOTP authenticator app for managing 2FA codes"
authors = ["Zeleyy"]
edition = "2021"

[lib]
name = "zeleyy_authenticator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2.4.2"
rand = "0.10.0"
totp-lite = "2.0.1"
base32 = "0.5.1"
data-encoding = "2.10.0"
tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2"
rusqlite = { version = "0.39.0", features = ["bundled-sqlcipher"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.33.0"
tauri-plugin-os = "2"
tauri-plugin-log = "2"


[target.'cfg(target_os = "windows")'.dependencies]
openssl = { version = "0.10.76", features = ["vendored"] }
keyring = { version = "3.6.3", features = ["windows-native"] }


[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.3", features = ["apple-native"] }


[target.'cfg(all(target_os = "linux", not(target_arch = "android")))'.dependencies]
keyring = { version = "3.6.3", features = ["sync-secret-service"] }


[target.'cfg(target_os = "android")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = [] }
android-keyring = "0.2.0"
tauri-plugin-status-bar-color = "1.0.0"
rusqlite = { version = "0.39.0", features = ["bundled-sqlcipher-vendored-openssl"] }
openssl = { version = "0.10", features = ["vendored"] }


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
