[package]
name = "zeleyy-authenticator"
version = "0.6.0"
description = "TOTP authenticator app for managing 2FA codes"
authors = ["Zeleyy"]
edition = "2021"

[lib]
name = "zeleyy_authenticator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
zeleyy-authenticator-core = { path = "../core" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2.4.2"
tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-os = "2"
tauri-plugin-log = "2"


[target.'cfg(target_os = "android")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = [] }
android-keyring = "0.2.0"
tauri-plugin-status-bar-color = "1.0.0"
rusqlite = { version = "0.39.0", features = ["bundled-sqlcipher-vendored-openssl"] }
openssl = { version = "0.10", features = ["vendored"] }


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-biometry = "0.2.6"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"


[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-biometric = "2"
